src/mm-input-mask/mm-input-mask.scss
/**
 * @license
 * Copyright (c) 2015 MediaMath Inc. All rights reserved.
 * This code may only be used under the BSD style license found at http://mediamath.github.io/strand/LICENSE.txt

*/
@import "_bourbon";
@import "_color";
@import "_fonts";
@import "_textinput";

:host {
	position: relative;
}

::content group,sep {
	display:none;
}

::content mm-input {
	z-index: -1;
}

#pseudo {
	box-sizing: border-box;
	position: absolute;
	top: -3px;
	left: 0;
	width: 100%;
	height: 29px;
	font-weight: 400;
	padding: 0 10px;

	input {
		font-family: Arimo, sans-serif !important;
		font-size: 13px !important;
		line-height: 2.231em !important;
		@include placeholder { font-style: italic; }
	}

	.mask {
		border: none;
		box-shadow: none;
		width: auto;
		padding: 0;
		margin: 0;
		height: 29px;
		line-height: 2.231em !important;
		background: none;

		@include transition(width .3s ease-in-out);

		&:focus {
			outline: none;
			background: none;
			box-shadow:none;
		}
	}

	.sep {
		margin: 0;
		padding: 6px 0;
	}

	.placeholder {
		color: #a9a9a9;
		font-style: italic;
	}
}

#input ::shadow input {

}

